clusters/my-cluster/apps/media/qbittorrent/app/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: qbittorrent-svc
  namespace: media
subsets:
- addresses:
  - ip: 192.168.0.152
  ports:
  - name: qbittorrent-app
    port: 80
    protocol: TCP
