clusters/my-cluster/apps/media/qbittorrent/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-svc
  namespace: media
spec:
  ports:
  - name: qbittorrent-app
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
